# jumpserver-sdk-python

./: .gitignore  Readme.md  pyproject.toml
jms_client/: client.py  const.py  session.py
jms_client/v1/: client.py
jms_client/v1/models/instance/: __init__.py  assets.py  common.py  domains.py  nodes.py  organizations.py  platforms.py
jms_client/v1/models/instance/accounts/: accounts.py
jms_client/v1/models/instance/assets/: assets.py
jms_client/v1/models/instance/audits/: __init__.py  user_sessions.py
jms_client/v1/models/instance/labels/: labels.py
jms_client/v1/models/instance/permissions/: __init__.py  command_groups.py
jms_client/v1/models/instance/users/: __init__.py  roles.py  users.py
jms_client/v1/models/request/: common.py  mixins.py  params.py
jms_client/v1/models/request/accounts/: account_templates.py  accounts.py
jms_client/v1/models/request/assets/: __init__.py  assets.py  domains.py  nodes.py  platforms.py
jms_client/v1/models/request/audits/: __init__.py  change_password_logs.py  commands.py  ftp_logs.py  job_logs.py  login_logs.py  operate_logs.py  (+2 more)
jms_client/v1/models/response/: __init__.py
tests/: config-example.ini  config.ini  test_account_template.py  test_accounts.py  test_asset.py  test_asset_login_acl.py  test_audits.py  test_auth.py  test_authenticate.py  test_command_acls.py  test_command_group.py  test_connect_method_acl.py  test_domain.py  test_label.py  test_node.py  test_organization.py  test_permission.py  test_platform.py  test_role.py  test_setting.py  test_user.py  test_user_group.py  test_user_login_acl.py
(+18 files in other folders)
