[tool.poetry]
name = "jms_client"
version = "1.0.0"
description = "JumpServer Python SDK"
authors = ["jiangweidong <1053570670@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
httpsig = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
